--- a/finite.tex
+++ b/finite.tex
@@ -15,6 +15,8 @@ still need to talk about closed and open subschemes, their basic properties
 \section{The context of a spectrum}\label{StableContextLecture}
 \citeme{Pridham's article \textit{Presenting higher stacks as simplicial schemes} seems like a good reference?  Maybe some Toen things are appropriate?  I don't really know where this simplicial scheme stuff is written down.}
 
+\todo[inline]{I don't think I mention Hopf algebroids during this lecture! This is a miserable oversight that \emph{must} be corrected.}
+
 Today we will make good on our promise, made during our investigation of the unoriented bordism ring, to explain where the Adams spectral sequence comes from.  This story neatly divides into two parts, and the first half is just an investigation of how rich of an algebraic category $\CatOf{C}$ we can find that supports a factorization
 \begin{center}
 \begin{tikzcd}
