--- a/cooperations.tex
+++ b/cooperations.tex
@@ -7,29 +7,35 @@
 
 
 
-
-\todo[inline]{This section can probably be introduced as trying to enrich the notion of a context for cohomology theories swallowing \emph{spaces}.  The stable cooperations are totally captured by the notion of a context, but there are two approaches to (distinct sorts of) unstable operations: Hopf rings and power operations.  We plan on talking about both (and they both have something to say about $MU\<6\>$), so this can be a common thread.}
-
-
-
-
 \section{Unstable contexts}
 
-\todo[inline]{I would like to construct a framework that these things live in, like simplicial schemes gave a framework for stable contexts.  At first glance, though, I'm not sure what to do / whether this is possible.  My best guess for now is some arboreal thing, where $E_* \OS{F}{*}$ plays the role of an operadic right-module and $E_* \OS{E}{*}$ governs the internal structure of the tree.  This doesn't seem quite right, though, and I'm already getting sick of thinking about it.}
+Today we will take the framework of contexts discussed in \Cref{StableContextLecture} and augmnet it in two important (and very distinct) ways.  First, we will assume that $X$ is a \emph{space} rather than a spectrum, and try to encode the extra structure appearing on $E_* X$ from this assumption.  Toward that end, recall that the levels of $\context{E}(X)$ are defined by repeatedly smashing $X$ with $E$, and that we had arrived at this by considering descent for the adjunction
+\begin{center}
+\begin{tikzcd}
+\CatOf{Spectra} \arrow[-,double]{r} & \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} & \CatOf{Modules}_E \arrow[shift left=0.4em]{l}
+\end{tikzcd}
+\end{center}
+induced by the algebra map $\S \to E$.  Given a spectrum $X$, our framework was set up to give the best possible approximation $X^\wedge_E$ within $E$--module spectra.
 
-Let $E$ be a ring spectrum with constituent spaces $\OS{E}{*}$ in its $\Omega$--spectrum.  Then for a space $X$ we define the space \[E(X) = \colim_{j \to \infty} \Loops^j (\OS{E}{j} \sm X) = \Loops^\infty (E \sm \Susp^\infty X)\] which has the property $\pi_* E(X) = \widetilde E_* X$.  This construction defines a functor with two evident natural transformations:\todo{Sort out this question mark.}
+We will extend this to spaces by sewing this adjunction together with another:
+\begin{center}
+\begin{tikzcd}
+\CatOf{Spaces} \arrow[shift left=0.4em]{r}{\Susp^\infty} & \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} \arrow[shift left=0.4em]{l}{\Loops^\infty} & \CatOf{Modules}_E \arrow[shift left=0.4em]{l} .
+\end{tikzcd}
+\end{center}
+We will write $E(-)$ for the induced monad\todo{You avoided talking about \emph{monadic} descent in the previous lectures, and instead you were vague about it. Maybe you have to spell that out now.} on $\CatOf{Spaces}$, given by the formula \[E(X) = \colim_{j \to \infty} \Loops^j (\OS{E}{j} \sm X) = \Loops^\infty (E \sm \Susp^\infty X),\] where $\OS{E}{*}$ are the constituent spaces in the $\Omega$--spectrum of $E$.  This space has the property that $\pi_* E(X) = \widetilde E_* X$ (in nonnegative dimensions).  The monadic structure comes from the two evident natural transformations:
 \begin{align*}
 \eta \co X & \simeq S^0 \sm X \\
 & \to \OS{E}{0} \sm X \\
-& \to \colim_{j \to \infty} \Loops^j(\OS{E}{j} \sm X) \simeq E(X), \\
-\\
+& \to \colim_{j \to \infty} \Loops^j(\OS{E}{j} \sm X) = E(X), \\
 \mu \co E(E(X)) & = \colim_{j \to \infty} \Loops^j \left( \OS{E}{j} \sm \colim_{k \to \infty} \Loops^k (\OS{E}{k} \sm X) \right) \\
-& \xrightarrow{\simeq?} \colim_{\substack{j \to \infty \\ k \to \infty}} \Loops^{j+k} (\OS{E}{j} \sm \OS{E}{k} \sm X) \\
+& \to \colim_{\substack{j \to \infty \\ k \to \infty}} \Loops^{j+k} (\OS{E}{j} \sm \OS{E}{k} \sm X) \\
 & \xrightarrow{\mu} \colim_{\substack{j \to \infty \\ k \to \infty}} \Loops^{j+k} (\OS{E}{j+k} \sm X) \xleftarrow{\simeq} E(X).
 \end{align*}
 
+Just as in the stable situation, we can extract from this a cosimplicial space:
 \begin{definition}
-Using these maps, we can construct the following cosimplicial space, the unstable analogue of the descent object from \Cref{StableContextLecture}:
+Consider the descent cosimplicial object
 \[\sheaf{UD}_E(X) := \left\{
 \begin{tikzcd}
 \begin{array}{c} E \\ \circ \\ X \end{array} \arrow[leftarrow, shift left=\baselineskip]{r}{\mu} \arrow[shift left=(2*\baselineskip)]{r}{\eta_L} \arrow{r}{\eta_R} &
@@ -41,43 +47,46 @@ Using these maps, we can construct the following cosimplicial space, the unstabl
 Its totalization gives the \textit{unstable $E$--completion of $X$}.
 \end{definition}
 
+Under suitable hypotheses, we can extract from this an unstable analog of $\context{E}$:
 \begin{definition}
-Under suitable hypotheses, we extract from this an \textit{unstable context for $E$}:
-\begin{align*}
-\mathcal{UM}_E & := \Spec \pi_* \sheaf{UD}_E(S^0) \\
-& = \left\{
-\begin{tikzcd}[ampersand replacement=\&]
-\Spec \pi_* E \arrow{r} \arrow[leftarrow,shift left=\baselineskip]{r}
-\arrow[leftarrow,shift right=\baselineskip]{r}
-\&
-\Spec \pi_* \left( \begin{array}{c} E \\ \circ \\ E \end{array} \right)
-\arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} \arrow[leftarrow, shift right=(2*\baselineskip)]{r}
-\&
+Suppose that $\sheaf{UM}_E(S^{2*})$ is level-wise even-concentrated for each value of $*$.  Then, we define the \textit{unstable context of $E$} to be the following graded simplicial scheme:\todo{I don't think this is satisfied even in the case of ordinary homology.  I think you're obligated to just say ``well, up to odd information...''}
+\[\sheaf{UM}_E^n := \left\{
+\begin{tikzcd}
+\Spec \pi_* \left( \begin{array}{c} E \\ \circ \\ S^{2n} \end{array} \right) \arrow[shift left=\baselineskip]{r}{\mu} \arrow[leftarrow, shift left=(2*\baselineskip)]{r}{\eta_L} \arrow[leftarrow]{r}{\eta_R} &
+\Spec \pi_* \left( \begin{array}{c} E \\ \circ \\ E \\ \circ \\ S^{2n} \end{array} \right) \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r}{\Delta} \arrow{r} \arrow[shift right=\baselineskip]{r} &
 \cdots
 \end{tikzcd}
-\right\}
-\end{align*}
-as well as a quasicoherent sheaf over it associated to $X$:
+\right\}.\]
+as well as a quasicoherent sheaf over it associated to $X$:\todo{I don't think that it's correct to drag the suspension through this object.}
 \begin{align*}
-\sheaf{UM}_E(X) & := \left(\pi_* \sheaf{UD}_E(X)\right){\widetilde{}} \\
+\sheaf{UM}_E^n(X) & := \left(\pi_* \sheaf{UD}_E(\Susp^{2n} X)\right){\widetilde{}} \\
 & = \left\{
 \begin{tikzcd}[ampersand replacement=\&]
-\pi_* \left( \begin{array}{c} E \\ \circ \\ X \end{array} \right)\widetilde{} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow{r} \&
-\pi_* \left( \begin{array}{c} E \\ \circ \\ E \\ \circ \\ X \end{array} \right)\widetilde{} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} \&
-\pi_* \left( \begin{array}{c} E \\ \circ \\ E \\ \circ \\ E \\ \circ \\ X \end{array} \right)\widetilde{} \arrow[shift left=(4*\baselineskip)]{r} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} \&
+\pi_* \left( \begin{array}{c} E \\ \circ \\ \Susp^{2n} X \end{array} \right)\widetilde{} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow{r} \&
+\pi_* \left( \begin{array}{c} E \\ \circ \\ E \\ \circ \\ \Susp^{2n} X \end{array} \right)\widetilde{} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} \&
+\pi_* \left( \begin{array}{c} E \\ \circ \\ E \\ \circ \\ E \\ \circ \\ \Susp^{2n} X \end{array} \right)\widetilde{} \arrow[shift left=(4*\baselineskip)]{r} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} \&
 \cdots
 \end{tikzcd}
 \right\}.
 \end{align*}
 \end{definition}
 
-say when this thing has good convergence properties to $\pi_* X$ (cf. Section 3 of BCM)
+While straightforward, these new definitions demand various investigations of new accompanying objects.
 
-say when this thing has an identifiable $E_2$ term (cf. the end of Section 6 of BCM in particular)
 
-give a description of the first two stages of the context in terms of Hopf rings
 
-mention how to select the \emph{additive} unstable cooperations
+Convergence of the unstable Adams spectral sequence (cf.\ BCM Section 3)
+
+Identification of its $E_2$--term (cf.\ BCM Section 6 and the formula $E_2^{s, t}(X; R) \cong \Ext^s_{\CatOf{M}(G)}(A[t]; R_* X)$.)
+
+Definition of a Hopf ring
+
+An {\FH}--type condition.  The difference between all unstable operations and additive unstable operations (and, in particular, flatness is only satisfied in the latter case).
+
+
+
+Mixed Hopf rings and non-disjoint covers by multiple ring spectra
+
 
 ------------
 
@@ -116,11 +125,7 @@ A_{s, t} \otimes_{R_*} (A_{s', t'} \otimes_{R_*} A_{s'', t'}) \arrow{r}{1 \otime
 
 The context of additive unstable cooperations: make the module of $\ast$--indecomposables $QE_* \Susp^{-*} \OS{E}{*}$ into an algebra using the $\circ$--product, noting that it descends to a map \[QE_* \Susp^{-n} \OS{E}{n} \otimes QE_* \Susp^{-m} \OS{E}{m} \to QE_* \Susp^{-(n+m)} \OS{E}{n+m}.\]  The cooperations that survive to the $\ast$--indecomposables are exactly the additive ones.
 
-The context of all unstable cooperations: don't pass to the indecomposable quotient.  This is pretty complicated.
-
 Unbalanced unstable cooperations and Morita functors: I feel that given an unstable $E^*$--comodule $M$, one can produce an unstable $F^*$--comodule by a tensoring operation: $M \otimes_? F_* \OS{E}{*}$ (or something?).  If $M$ is actually $M = E^* X$ for a space $X$, then there should be a comparison map \[F^* X \to E^* X \otimes_? F_* \OS{E}{*}.\]  This will rarely be an isomorphism, but it should fit into the sheaf-over-a-simplicial-scheme picture as something like a face map.
-
-Associated Adams spectral sequences and completions?
 
 Comparison with past scholia on ``piles''?
 
@@ -132,8 +137,6 @@ Goerss mentions inverting the suspension element as being the same as stabilizin
 Lukas's main suggestion was to consider how the shriek functors were computed in excellent cases, so that maybe the push-pull formula could be directly interpreted on the level of spectra.  I think this is a good thing to think about.  Maybe it will tell us how ``handed'' Hopf rings appear in isolation, without their chirally dual mate.
 
 Talk about how $\S \to E$ is being treated like a cover. If you have two covers, you can take their joint cover $\S \to E \vee F$, whose $1$--simplices pick up a mixed term: \[(E \vee F) \sm (E \vee F) \simeq E^{\sm 2} \vee F^{\sm 2} \vee (E \sm F)^{\vee 2}.\]  This mixed term prevents double-counting, and it makes it sort of reasonable that it should involve isomorphisms between mixed formal group types.  (This mixed cooperations perspective might have to wait until the chapter on unstable contexts.)
-
-I'm fairly certain that the monad associated to the unstable composite adjunction is monoidal.  It show immediately follow that the unstable $E$--homology descent object gives a quasicoherent sheaf over the unstable $E$--homology context formed by taking the unstable $E$--homologies of all of the spheres\ldots
 
 Does the adjective ``Cartesian'' make sense here?  Is it still the case that the topological object is always ``Cartesian'', and $\pi_*$ preserves Cartesianness in the presence of loads of flatness hypotheses on $E_* \OS{E}{*}$?
 
@@ -160,6 +163,10 @@ where the last map is a K\"unneth-type map...?  (Actually, I'm not so sure about
 Anyway, if there were some splitting like this, the next step would be to check if setting $E = F$ has mechanisms in it to prevent double-counting.  (As a side question: is it clear that the unstable $E$--completion is equivalent to the unstable $E \vee E$--completion?)
 
 Probably a lot of my questions would be cleared up by actually trying to write down where the unstable coaction map comes from.  Good grief.
+
+------
+
+I think the ``algebraic'' part (or ``wrong-way'' part, anyway) of the coaction map comes from the map \[\{S^m \to E(E(S^n))\} \times \{S^n \to E(X)\} \xrightarrow{\mathrm{compose}} \{S^m \to E(E(E(X))) \xrightarrow{\mathrm{collapse latter factors}} E(E(X))\}.\]  I think we should be able to see what the relevant ``flatness'' hypothesis should be from here, and then even in the case $E = H\F_p$ I think it should be visibly unreasonable to expect this map to be sufficiently surjective so that passing to the associated map off of the tensor product induces an isomorphism.  Instead, we really do have to pass to the additive cooperations.  (I also think it should be visible what the $E_*$--action on the two sides should be.  On the left, it should come from the usual scaling.  On the right, it should come from acting by the Hopf ring elements ``$[e]$'' in Steve's notation (cf.\ Section 4.3).)
 
 
 
