--- a/mo.tex
+++ b/mo.tex
@@ -200,6 +200,8 @@ Additionally, the colimit of the sets $\colim_{n \to \infty} \mathbb A^{1,(n)}(T
 An \textit{affine formal scheme} is an ind-system of finite\todo{How are finite schemes characterized in the functor of points perspective?} affine schemes.  \todo{Several people had questions about the utility of this. Does it just add certain colimits to the category of \emph{finite} affine schemes?}  The morphisms between such schemes are computed by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\beta \colim_\alpha \CatOf{Schemes}(X_\alpha, Y_\beta).\]\todo{Question: can we reverse the order of taking lim and colim here?-danny}
 \end{definition}
 
+% I might be the only person who cares, but there are two issues with this definition: first off one needs that the morphisms to be infintesimal thickenings.  Secondly, usually one allows the schemes to be finite type over $\mathbb{F}_2$ and not just finite.  Obviously if all the formal schemes that will come up in this class are in $\mathrm{Art}(\mathbb{F}_2)$ then the second objection is moot.  EK
+
 \begin{example}\label{FormalGaExample}
 The individual schemes $\mathbb A^{1, (n)}$ do not support group structures.  After all, the sum of two elements which are nilpotent of order $n$ can only be guaranteed to be nilpotent of order $2n$. \todo{There is a minor indexing problem here. The elements corresponding to $A^{1, (n)}$ are actually nilpotent of order $n+1$} It follows that the entire ind-system $\{\mathbb A^{1, (n)}\} =: \A^1$ supports a group structure, even though none of its constituent pieces do.  We call such an object a \textit{formal group scheme}, and this particular formal group scheme we denote by $\G_a$.
 \end{example}
@@ -207,6 +209,10 @@ The individual schemes $\mathbb A^{1, (n)}$ do not support group structures.  Af
 \begin{example}
 Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, but there is a second filtration along the lines of the one considered above: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes are only occasionally group schemes.  The reader is invited\todo{Never invite the reader to do anything.}\todo{Does this just follow that there is a common cofinal subsystem, i.e., when $n$ is a power of 2?}  to check that there is an isomorphism $\{\Gm[n]\} \cong \{\Gm^{(n)}\}$ of formal schemes over $\F_2$, and that the induced formal group scheme structure on the right-hand side cannot be written level-wise --- rather, it involves the entire ind-scheme.\todo{Someone was interested in the relationship of this to the punctured formal scheme $\F_p(\!(q)\!)$.}
 \end{example}
+
+%The reader invitation is as far as I can tell is either incoherent or impossible due to the condition that the maps making up formal schemes need to be infinitesimal thickenings.  I think that correcting it goes as follows: requiring the inverse system to be of infintesimal thickenings means that the only $m$ such that $\mathbb{G}_m[m]$ is an infinitesimal thickening of the identity are the $m$ of the form $p^n$ which makes the result ``obvious'' in some sense.  EK
+
+%The notion of the punctured disk is also wonky in the category of formal schemes.  In particular, one has that $\mathrm{Spf}(\mathbb{F}_2[[t]])$ has only one point in the underlying topological space.  This is part of why formal schemes aren't just schemes where the structure sheaf is of topological rings instead of rings: the points correspond to open ideals.  The ``correct'' category to take generic fibers of formal schemes is adic spaces, but that is not a discussion that is worth going into.  EK
 
 Let's now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is such a useful thing to do that we will give it a notation all of its own:
 
