--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,7 @@
 
 \usepackage{tikz-cd}
 
-\usepackage{todonotes}
+\usepackage[textsize=tiny]{todonotes}
 \usepackage{lscape}
 \usepackage{rotating}
 \usepackage{mathtools}
@@ -58,6 +58,7 @@
 
 %%% DONE WITH PACKAGES
 
+\setlength{\marginparwidth}{1in-\marginparsep} % fullpage sets margins to 1in
 
 \newcommand{\oweproof}[1]{\todo[color=red]{\textbf{You owe a proof of: } #1.}}
 \newcommand{\citeme}[1]{\todo[color=green]{\textbf{Cite me: } #1.}}
