question about non-finite schemes

--- a/mo.tex
+++ b/mo.tex
@@ -306,7 +306,7 @@ The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the unive
 
 We close our discussion by codifying what Milnor did when he stabilized against $n$.  Each $\RP^n_{H\F_2}$ is a finite affine scheme, and to make sense of the object $\RP^\infty_{H\F_2}$ Milnor's technique was to consider the ind-system $\{\RP^n_{H\F_2}\}_{n=0}^\infty$ of finite affine schemes.  We will record this as our technique to handle general infinite complexes:
 \begin{definition}
-When $X$ is an infinite complex, filter it by its subskeleta $X^{(n)}$ and define $X_{H\F_2}$ to be the ind-system $\{X^{(n)}_{H\F_2}\}_{n=0}^\infty$ of finite schemes.\footnote{More canonically, when $X$ is ``compactly generated'', it can be written as the colimit of its compact subspaces $X^{(\alpha)}$, and we define $X_{H\F_2}$ using the ind-system $\{X^{(\alpha)}_{H\F_2}\}_\alpha$.}
+When $X$ is an infinite complex, filter it by its subskeleta $X^{(n)}$ and define $X_{H\F_2}$ to be the ind-system $\{X^{(n)}_{H\F_2}\}_{n=0}^\infty$ of finite schemes.\footnote{More canonically, when $X$ is ``compactly generated'', it can be written as the colimit of its compact subspaces $X^{(\alpha)}$, and we define $X_{H\F_2}$ using the ind-system $\{X^{(\alpha)}_{H\F_2}\}_\alpha$.}\todo{So this is not the same as $\Spec H^*X$\dots We seem to be doing this ind-business to generalize finite schemes. But there are plenty of non-formal schemes that are not finite. I guess the point is that building a space up by subskeleta naturally leads to this, and not to non-finite schemes? -EB}
 \end{definition}
 
 This choice collapses our uncertainty about the topological example from last time:
