--- a/preface.tex
+++ b/preface.tex
@@ -24,6 +24,8 @@ Hisham Sati: the \textit{Flavors of Cohomology} workshop
 
 Berkeley students: Hood Chatham and Geoffrey Lee, Catherine Ray
 
-Course participants: Lukas Brantner, Jeremy Hahn, XiaoLin (Danny) Shi
+Course participants (collected 2/3, probably missing some MIT people): Adam Al-Natsheh, Eva Belmont, Jason Bland, Lukas Brantner, Christian Carrick, Jun Hou Fung, Meng Guo, Jeremy Hahn, Changho Han, Chi-Yun Hsu, Erick Knight, Benjamin Landon, Gabriel Long, Yusheng Luo, Jack Marcinek, Jack McNamara, Max Menzies, Morgan Opie, Alexander Perry, Kishanu Sankar, Ananth Shankar, Danny Shi, Koji Shimizu, Geoffrey Smith, Hunter Spink, Philip Tynan, Yi Xie, Zijian Yao, Lynnelle Ye, Chenglong Yu, Allen Yuan, Adrian Zahariuc, Yifei Zhao, Yihang Zhu.
+
+People who contributed to the GitHub repository (to be collected later, make sure there's no overlap with the above list): 
 
 Other readers: Jon Beardsley, Kevin Wray
